src/test/deca/context/invalid/created/SansObjet/WrongTypeAssign.deca
// Description:
//    Teste l'assignation d'une chaine de caractere a un booleen
// Resultats:
//    WrongTypeAssign.deca:7:16: Error: Illegal RValue type, got string, expected boolean

{
    boolean b = "aaa";
}